--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -3,8 +3,8 @@
     <div class="col-lg-8">
       <h3>Surveys Taken:</h3>
       <ul>
-        <% @taken_surveys.each do |survey| %>
-          <li><%= survey.title %></li>
+        <% @taken_surveys.each do |title| %>
+          <li><%= title %></li>
         <% end %>
       </ul>
 
