working logic and display for results.erb

--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -1,20 +1,15 @@
 <div class="container">
   <div class="question">
     <h3><%= @survey.title %> Results:</h3>
+    <% @questions.each do |question| %>
+    <%= question.prompt %><br>
     <ul>
-      <% @questions.each do |question| %>
-        <li><%= question.prompt %></li>
-          <ul>
-            <% Choice.where(question_id: question.id).each do |choice|%>
-              <li><%= choice.option %>: 
-                <%= Vote.where(choice_id: choice.id).length %> votes
-                  <% if Vote.where(question_id: question.id).length > 0 %>
-                    (<%= (Vote.where(choice_id: choice.id).length / Vote.where(question_id: question.id).length) * 100 %>%)
-                  <%end%>   
-            <%end%>  
-              </li>
-          </ul>
-      <% end %>
+      <% question.choices.each do |choice| %>
+      <li> <%= choice.option %> - <%= choice.percentage_calc %> % </li>
+      <% end %> 
+      <br>
     </ul>
+    <% end %>
+
+    </div>
   </div>
-</div>
